--- a/src/main/java/view/PvP.fxml
+++ b/src/main/java/view/PvP.fxml
@@ -9,7 +9,7 @@
     <children>
         <ImageView fitHeight="538.0" fitWidth="538.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/screen.png" />
+                <Image url="@../backimages/screen.png" />
             </image>
         </ImageView>
 
